# portfolio-tracker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  tauri-http.d.ts  tauri-opener.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  yahoo.rs
src/components/charts/: ChartSizeBox.tsx
src/components/common/: CurrencySelect.tsx  EmptyState.tsx  MarketBadge.tsx  Modal.tsx  RefreshButton.tsx  SyncConflictDialog.tsx  TickerSearchInput.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  ThemeToggle.tsx
src/components/portfolio/: AddHoldingForm.tsx  CashAccountCard.tsx  HoldingsTable.tsx
src/components/research/: NoteEditor.tsx  (+3 more)
src/constants/: autoTags.ts  currencies.ts
src/contexts/: ConfirmDialogProvider.tsx  DataSyncContext.tsx  ExtendedHoursContext.tsx  RefreshTimerContext.tsx  dataSyncContextValue.ts
src/db/: database.ts  hooks.ts
src/hooks/: useBackfillHoldingCountries.ts  useDividendSync.ts  useEffectivePrice.ts  useExchangeRates.ts  useExpectedIncome.ts  useMarketState.ts  usePrices.ts  useTheme.tsx
src/pages/: Dashboard.tsx  Debug.tsx  Portfolio.tsx  Research.tsx  Settings.tsx  Transactions.tsx  Watchlist.tsx
src/services/: dataSync.ts  dataSyncRegistry.ts  debugLog.ts  dividendProcessor.ts  exchangeRates.ts  fileAdapter.ts  openExternal.ts  syncFileStore.ts  tickerCurrency.ts  yahooFinance.ts
src/types/: index.ts
src/utils/: confirmBeforeDelete.ts  confirmBridge.ts  format.ts  portfolioCurrency.ts
(+2 files in other folders)
